--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^6.0.0",
     "gulp-clean-css": "^4.0.0",
+    "gulp-sass": "3.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-imagemin": "^5.0.3",
     "gulp-rigger": "^0.5.8",
-    "gulp-sass": "^4.0.2",
     "gulp-uglify": "^3.0.1",
     "node-sass": "^4.11.0"
   }
